--- a/.github/workflows/githubactions-demo.yaml
+++ b/.github/workflows/githubactions-demo.yaml
@@ -15,4 +15,4 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - run: echo "The commit message that triggered this action was ${{ jobs.status }}."
+      - run: echo "The commit message that triggered this action was ${{ job.status }}."
